# Characterization-of-Spoken-Dialogue-Agents

./: .gitignore  AgeGenderPredict.py  LLM.py  TTS_run.py  llm_ELYZA.py  llm_sarashina.py  main.py  pyproject.toml  style_bert_vits2_test.py  voice_client_vad.py  voice_input.py
ASR_finetune/: config_finetune.yaml  finetune_kotoba.py
