[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audb>=1.11.3",
    "audinterface>=1.3.1",
    "audmetric>=1.2.2",
    "audonnx>=0.8.0",
    "audplot>=1.4.7",
    "notebook>=7.4.4",
    "scipy>=1.16.0",
    "soundfile>=0.13.1",
]
